[package]
name = "hci"
version = "0.1.0"
authors = ["Micah Wylde <micah@micahw.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

description = """
A parser for the bluetooth Host-Controller Interface (hci), currently
supporting a partial implementation of Bluetooth 5.
"""

readme = "README.md"
keywords = ["bluetooth", "hci"]
categories = ["network-programming", "hardware-support"]
homepage = "https://github.com/mwylde/hci-rs"

[dependencies]
protogen = { git = "https://github.com/mwylde/protogen", branch = 'to_vec' }

[build-dependencies]
protogen-compiler =  { git = "https://github.com/mwylde/protogen", branch = 'to_vec' }

[dev-dependencies]
hex = "^0.3"
